--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT=5000
 MONGO_URI=mongodb+srv://pratimanagannavar_db_user:Pratima16@cluster0.mzc5ijj.mongodb.net/expenseDB?retryWrites=true&w=majority
 JWT_SECRET=secretkey123
+EMAIL_USER=pratimanagannavar@gmail.com
+EMAIL_PASS=noau cxrv qqcr nxjx
