--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.14.1",
+    "react-select": "^5.10.2",
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
     "vite": "^5.0.0"
