--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.0"
+    "mongoose": "^7.0.0",
+    "nodemailer": "^7.0.11"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
